fixed Gap/border/etc

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -63,6 +63,10 @@
     --input: 217.2 32.6% 17.5%;
     --ring: 212.7 26.8% 83.9%;
   }
+
+  .bg-background {
+    background-color: hsl(var(--background));
+  }
 }
 
 * {
